Make naming of executables consistent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,9 +148,9 @@ install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-planner-search
 install(FILES plan
     PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
     DESTINATION bin
-    RENAME arvand-herd-planner)
+    RENAME arvand_herd-planner)
 install(FILES sat_conf
     PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
     DESTINATION bin/${PROJECT_NAME}
-    RENAME arvand-herd-sat_conf)
+    RENAME arvand_herd-sat_conf)
 
